# llm-finetuning

./: README.md  app.py  pyproject.toml
config/: datasets.yaml  fine_tuning.yaml  models.yaml
data/: dataset.py
fine_tuning/: lora.py
utils/: data_preprocessing.py  evaluation.py
